Got div to scroll to top of ref div! And fixed logic for not showing if there is not pic with review

--- a/react-app/src/components/Reviews/Reviews.css
+++ b/react-app/src/components/Reviews/Reviews.css
@@ -155,8 +155,14 @@
   margin: 10px;
 }
 
-.review-left-side {
+.review-left-side-true {
   width: 70%;
+  height: 100%;
+  padding: 10px;
+}
+
+.review-left-side-false {
+  width: 100%;
   height: 100%;
   padding: 10px;
 }
